--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -8,7 +8,7 @@ TERM = "alacritty"
 
 [window]
 padding = {x = 5, y = 5}
-dynamic_padding = true
+dynamic_padding = false
 opacity = 1
 blur = true
 decorations = "Buttonless"
