(tmux): bin ctrl+n ctrl+p to next/previous window, make them repeatable

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -57,10 +57,12 @@ unbind '"'
 unbind %
 
 bind c new-window -c "#{pane_current_path}"
+bind -r C-n next-window
+bind -r C-p previous-window
 
 # Sesh
 bind C-s run-shell "sesh connect \"$(
-  sesh list --icons | fzf-tmux -p 50%,50% \
+  sesh list --icons | fzf-tmux -p 50%,70% \
     --no-sort --ansi --border-label ' sesh ' --prompt '  ' --gutter ' ' --pointer ' ' \
     --header '^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
     --color='header:0' \
