(waybar): 4 persistent workspaces

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -26,8 +26,12 @@
       "active": "",
       "default": ""
     },
-    "persistent-workspaces": true,
-    "active-only": false
+    "persistent-workspaces": {
+      "1": [],
+      "2": [],
+      "3": [],
+      "4": [],
+    }
   },
 
   "clock": {
