--- a/hypr/.config/hypr/bindings.conf
+++ b/hypr/.config/hypr/bindings.conf
@@ -26,6 +26,11 @@ bind = $mainMod SHIFT, L, movewindow, r
 bind = $mainMod SHIFT, K, movewindow, u
 bind = $mainMod SHIFT, J, movewindow, d
 
+bind = $mainMod CTRL SHIFT, H, resizeactive, -40 0
+bind = $mainMod CTRL SHIFT, L, resizeactive,  40 0
+bind = $mainMod CTRL SHIFT, K, resizeactive,  0 -40
+bind = $mainMod CTRL SHIFT, J, resizeactive,  0  40
+
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
