(tmux): extended keys

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -10,17 +10,9 @@ bind C-k clear-history
 # set -as terminal-overrides ",*:RGB,*:Tc"
 # set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 # set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
-#
-# set -s extended-keys always
-# set -as terminal-features '*:extkeys'
-#
-# # Preserve distinct keys (C-i vs TAB, C-m vs RET)
-# set -as terminal-overrides '*:kUP5=\EOA*:kDN5=\EOB*:kRIT5=\EOC*:kLFT5=\EOD'
-# set -as terminal-overrides 'xterm*:XT:Ms=\E]52;%p1%s;%p2%s\^G'
-# # Don't translate C-i to TAB and C-m to RET
-# set -as terminal-overrides '*:kci=\E[9;5u:*:kti=\E[9;9u'
-# # Alternative: disable translation completely
-# setw -g xterm-keys on
+
+set -s extended-keys always
+set -as terminal-features '*:extkeys'
 
 # cursor
 set -g mouse on
