--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -27,6 +27,11 @@ setw -g mode-style 'fg=black bg=blue bold'
 set -g pane-border-style 'fg=black'
 set -g pane-active-border-style 'fg=colour8'
 
+set -g popup-border-lines 'rounded'
+set -g popup-border-style 'fg=black'
+
+set -g menu-border-style 'fg=black'
+
 # statusbar
 set -g status-left     ''
 set -g status-right    ''
@@ -34,11 +39,9 @@ set -g status-position bottom
 set -g status-justify  centre
 set -g status-style    'fg=colour8'
 
-set -g popup-border-lines 'rounded'
-
-setw -g window-status-current-style  'fg=colour4 bg=default bold'
+setw -g window-status-current-style  'fg=0 bg=default bold'
 setw -g window-status-current-format '[#W #F]'
-setw -g window-status-style          'fg=colour4 dim'
+setw -g window-status-style          'fg=0 dim'
 setw -g window-status-format         '[#W #F]'
 setw -g window-status-bell-style     'fg=colour3 bg=default bold'
 
@@ -65,7 +68,7 @@ bind C-s run-shell "sesh connect \"$(
   sesh list --icons | fzf-tmux -p 50%,70% \
     --no-sort --ansi --border-label ' sesh ' --prompt '  ' --gutter ' ' --pointer ' ' \
     --header '^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
-    --color='header:0 prompt:0' \
+    --color='header:0 prompt:0 border:0 label:0' \
     --bind 'tab:down,btab:up' \
     --bind 'ctrl-a:change-prompt(  )+reload(sesh list --icons)' \
     --bind 'ctrl-t:change-prompt(  )+reload(sesh list -t --icons)' \
