ghostty color tweaks, tmux config

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,10 +1,27 @@
+# bindings
 set -g prefix C-s
 
 bind-key r source ~/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded."
-
 bind C-s send-prefix
 bind C-l send-keys 'C-l'
 bind C-k clear-history
+
+# Split panes with \ and -
+bind \\ split-window -h -c "#{pane_current_path}"
+bind -  split-window -v -c "#{pane_current_path}"
+unbind '"'
+unbind %
+
+bind c new-window -c "#{pane_current_path}"
+bind -r C-n next-window
+bind -r C-p previous-window
+bind-key x kill-pane # skip confirmation
+
+#resize panes
+bind-key -r -T prefix C-Up    resize-pane -U
+bind-key -r -T prefix C-Down  resize-pane -D
+bind-key -r -T prefix C-Left  resize-pane -L
+bind-key -r -T prefix C-Right resize-pane -R
 
 # set -g default-terminal "tmux-256color"
 # set -as terminal-overrides ",*:RGB,*:Tc"
@@ -14,10 +31,7 @@ bind C-k clear-history
 set -s extended-keys always
 set -as terminal-features '*:extkeys'
 
-# cursor
 set -g mouse on
-
-# clock mode
 setw -g clock-mode-colour colour1
 
 # copy mode
@@ -53,22 +67,14 @@ set-option -g renumber-windows on
 # messages
 set -g message-style 'fg=blue bg=default bold'
 
-# Split panes with \ and -
-bind \\ split-window -h -c "#{pane_current_path}"
-bind -  split-window -v -c "#{pane_current_path}"
-unbind '"'
-unbind %
-
-bind c new-window -c "#{pane_current_path}"
-bind -r C-n next-window
-bind -r C-p previous-window
+set -g detach-on-destroy off
 
 # Sesh
 bind C-s run-shell "sesh connect \"$(
-  sesh list --icons | fzf-tmux -p 50%,70% \
+  sesh list | fzf-tmux -p 50%,70% \
     --no-sort --ansi --border-label ' sesh ' --prompt '  ' --gutter ' ' --pointer ' ' \
     --header '^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
-    --color='header:0 prompt:0 border:0 label:0' \
+    --color='header:0 prompt:0 border:0 label:0 fg:0' \
     --bind 'tab:down,btab:up' \
     --bind 'ctrl-a:change-prompt(  )+reload(sesh list --icons)' \
     --bind 'ctrl-t:change-prompt(  )+reload(sesh list -t --icons)' \
@@ -79,12 +85,6 @@ bind C-s run-shell "sesh connect \"$(
     # --preview-window 'right:55%' \
     # --preview 'sesh preview {}'
 )\""
-
-#resize panes
-bind-key -r -T prefix C-Up    resize-pane -U
-bind-key -r -T prefix C-Down  resize-pane -D
-bind-key -r -T prefix C-Left  resize-pane -L
-bind-key -r -T prefix C-Right resize-pane -R
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
