--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -14,7 +14,7 @@ set -s extended-keys always
 set -as terminal-features '*:extkeys'
 
 # Fix option key handling for accented characters on macOS
-set-option -g assume-paste-time 0
+# set-option -g assume-paste-time 0
 
 # cursor
 set -g mouse on
