tmux: arch sync

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,9 +1,27 @@
+# bindings
 set -g prefix C-s
 
 bind-key r source ~/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded."
 bind C-s send-prefix
 bind C-l send-keys 'C-l'
 bind C-k clear-history
+
+# Split panes with \ and -
+bind \\ split-window -h -c "#{pane_current_path}"
+bind -  split-window -v -c "#{pane_current_path}"
+unbind '"'
+unbind %
+
+bind c new-window -c "#{pane_current_path}"
+bind -r C-n next-window
+bind -r C-p previous-window
+bind-key x kill-pane # skip confirmation
+
+#resize panes
+bind-key -r -T prefix C-Up    resize-pane -U
+bind-key -r -T prefix C-Down  resize-pane -D
+bind-key -r -T prefix C-Left  resize-pane -L
+bind-key -r -T prefix C-Right resize-pane -R
 
 set -g default-terminal "tmux-256color"
 set -as terminal-overrides ",*:RGB,*:Tc"
@@ -13,13 +31,7 @@ set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{25
 set -s extended-keys always
 set -as terminal-features '*:extkeys'
 
-# Fix option key handling for accented characters on macOS
-# set-option -g assume-paste-time 0
-
-# cursor
 set -g mouse on
-
-# clock mode
 setw -g clock-mode-colour colour1
 
 # copy mode
@@ -29,6 +41,11 @@ setw -g mode-style 'fg=black bg=blue bold'
 set -g pane-border-style 'fg=black'
 set -g pane-active-border-style 'fg=colour8'
 
+set -g popup-border-lines 'rounded'
+set -g popup-border-style 'fg=black'
+
+set -g menu-border-style 'fg=black'
+
 # statusbar
 set -g status-left     ''
 set -g status-right    ''
@@ -36,11 +53,9 @@ set -g status-position bottom
 set -g status-justify  centre
 set -g status-style    'fg=colour8'
 
-set -g popup-border-lines 'rounded'
-
-setw -g window-status-current-style  'fg=colour4 bg=default bold'
+setw -g window-status-current-style  'fg=0 bg=default bold'
 setw -g window-status-current-format '[#W #F]'
-setw -g window-status-style          'fg=colour4 dim'
+setw -g window-status-style          'fg=0 dim'
 setw -g window-status-format         '[#W #F]'
 setw -g window-status-bell-style     'fg=colour3 bg=default bold'
 
@@ -52,46 +67,28 @@ set-option -g renumber-windows on
 # messages
 set -g message-style 'fg=blue bg=default bold'
 
-# Split panes with \ and -
-bind \\ split-window -h -c "#{pane_current_path}"
-bind -  split-window -v -c "#{pane_current_path}"
-unbind '"'
-unbind %
-
-bind c new-window -c "#{pane_current_path}"
+set -g detach-on-destroy off
 
 # Sesh
 bind C-s run-shell "sesh connect \"$(
-  sesh list --icons | fzf-tmux -p 66%,66% \
-    --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' --gutter ' ' --pointer ' ' \
-    --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+  sesh list | fzf-tmux -p 50%,70% \
+    --no-sort --ansi --border-label ' sesh ' --prompt '  ' --gutter ' ' --pointer ' ' \
+    --header '^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+    --color='header:0 prompt:0 border:0 label:0 fg:0' \
     --bind 'tab:down,btab:up' \
-    --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
-    --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t --icons)' \
-    --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c --icons)' \
-    --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
-    --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
-    --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
+    --bind 'ctrl-a:change-prompt(  )+reload(sesh list --icons)' \
+    --bind 'ctrl-t:change-prompt(  )+reload(sesh list -t --icons)' \
+    --bind 'ctrl-g:change-prompt(  )+reload(sesh list -c --icons)' \
+    --bind 'ctrl-x:change-prompt(  )+reload(sesh list -z --icons)' \
+    --bind 'ctrl-f:change-prompt(  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+    --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(  )+reload(sesh list --icons)' \
     # --preview-window 'right:55%' \
     # --preview 'sesh preview {}'
 )\""
 
-#resize panes
-bind-key -r -T prefix C-Up    resize-pane -U
-bind-key -r -T prefix C-Down  resize-pane -D
-bind-key -r -T prefix C-Left  resize-pane -L
-bind-key -r -T prefix C-Right resize-pane -R
-
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-
-# set -g @plugin 'tmux-plugins/tmux-resurrect'
-# set -g @resurrect-strategy-nvim 'session'
-#
-# set -g @plugin 'tmux-plugins/tmux-continuum'
-# set -g @continuum-restore 'on'
-# set -g @plugin 'aserowy/tmux.nvim'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
