--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -35,7 +35,7 @@ set -g mouse on
 setw -g clock-mode-colour colour1
 
 # copy mode
-setw -g mode-style 'fg=black bg=blue bold'
+setw -g mode-style 'fg=#000000 bg=blue bold'
 
 # pane borders
 set -g pane-border-style 'fg=black'
