--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -4,7 +4,7 @@ set -g prefix C-s
 bind-key r source ~/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded."
 bind C-s send-prefix
 bind C-l send-keys 'C-l'
-bind C-k clear-history
+bind C-k run-shell "clear"
 
 # Split panes with \ and -
 bind \\ split-window -h -c "#{pane_current_path}"
@@ -53,9 +53,9 @@ set -g status-position bottom
 set -g status-justify  centre
 set -g status-style    'fg=colour8'
 
-setw -g window-status-current-style  'fg=0 bg=default bold'
+setw -g window-status-current-style  'fg=colour8 bg=default bold'
 setw -g window-status-current-format '[#W #F]'
-setw -g window-status-style          'fg=0 dim'
+setw -g window-status-style          'fg=colour8 dim'
 setw -g window-status-format         '[#W #F]'
 setw -g window-status-bell-style     'fg=colour3 bg=default bold'
 
@@ -65,7 +65,7 @@ setw -g pane-base-index 1
 set-option -g renumber-windows on
 
 # messages
-set -g message-style 'fg=blue bg=default bold'
+set -g message-style 'fg=blue bg=default'
 
 set -g detach-on-destroy off
 
@@ -74,7 +74,7 @@ bind C-s run-shell "sesh connect \"$(
   sesh list | fzf-tmux -p 50%,70% \
     --no-sort --ansi --border-label ' sesh ' --prompt '  ' --gutter ' ' --pointer ' ' \
     --header '^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
-    --color='header:0 prompt:0 border:0 label:0 fg:0' \
+    --color='header:0 prompt:0 border:0 label:8 fg:8' \
     --bind 'tab:down,btab:up' \
     --bind 'ctrl-a:change-prompt(  )+reload(sesh list --icons)' \
     --bind 'ctrl-t:change-prompt(  )+reload(sesh list -t --icons)' \
@@ -88,7 +88,7 @@ bind C-s run-shell "sesh connect \"$(
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
+# set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
