--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,6 +1,7 @@
 mouse-hide-while-typing = true
 
-cursor-style-blink = true
+cursor-style = underline
+cursor-style-blink = false
 cursor-invert-fg-bg = false
 
 cursor-color = cell-foreground
