tmux: sesh colors

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -74,7 +74,7 @@ bind C-s run-shell "sesh connect \"$(
   sesh list | fzf-tmux -p 50%,70% \
     --no-sort --ansi --border-label ' sesh ' --prompt '  ' --gutter ' ' --pointer ' ' \
     --header '^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
-    --color='header:0 prompt:0 border:0 label:8 fg:8' \
+    --color='header:0 prompt:0 border:0 label:8 fg:8 fg+:blue' \
     --bind 'tab:down,btab:up' \
     --bind 'ctrl-a:change-prompt(  )+reload(sesh list --icons)' \
     --bind 'ctrl-t:change-prompt(  )+reload(sesh list -t --icons)' \
