--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -28,9 +28,9 @@ truncate_to_repo = false
 fish_style_pwd_dir_length = 1
 
 [character]
-success_symbol = "[❯](purple)"
-error_symbol = "[❯](red)"
-vimcmd_symbol = "[❮](purple)"
+success_symbol = "[\\$](bright-black)"
+error_symbol = "[\\$](red)"
+vimcmd_symbol = "[](bright-black)"
 
 [git_branch]
 format = "([$branch ]($style))"
