--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,1 +1,2 @@
-reload = , ~/Images/wallpapers/wallpaper.png
+preload = , ~/Images/photographs/marshes_by_the_north_sea_2013.55.1.15.jpg
+wallpaper = , ~/Images/photographs/marshes_by_the_north_sea_2013.55.1.15.jpg 
