--- a/hypr/.config/hypr/startup.conf
+++ b/hypr/.config/hypr/startup.conf
@@ -1,9 +1,10 @@
-exec-once = hyprpaper
+# exec-once = hyprpaper
 exec-once = hyprsunset
 exec-once = waybar
 
 # needed for walker
 exec-once = uwsm-app -- elephant
+
 # start walker as a service for speed
 exec-once = uwsm-app -- walker --gapplication-service
 
