--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,31 +1,27 @@
 [general]
-import = [
-    "./themes/kanagawa_dragon.toml",
-]
+import = [ "./themes/kanagawa_dragon.toml" ]
 
 [env]
 TERM = "alacritty"
 
 [window]
 padding = {x = 5, y = 5}
-dynamic_padding = false
+dynamic_padding = true
 opacity = 1
 blur = true
 decorations = "Buttonless"
 
 [font]
 normal = { family = "CommitMono Nerd Font" }
-# italic = { style = "RegularItalic" }
 size = 14
+offset = { x = 0, y = 3 }
 
 [cursor]
 style = { shape = "Underline", blinking = "Off"}
-blink_timeout = 0
-blink_interval = 500
 
 [mouse]
 hide_when_typing = true
 
 [colors]
-selection = { text = "CellForeground", background = "#353535" }
-cursor = { text = "CellBackground", cursor = "CellForeground" }
+selection = { text = "CellForeground", background = "#151515" }
+cursor = { text = "#000000", cursor = "CellForeground" }
