--- a/hypr/.config/hypr/looknfeel.conf
+++ b/hypr/.config/hypr/looknfeel.conf
@@ -1,8 +1,8 @@
 general {
-    gaps_in = 5
+    gaps_in = 2
     gaps_out = 10,20,20,20
     border_size = 1
-    col.active_border = rgba(caa88b60)
+    col.active_border = rgba(caa88ba0)
     col.inactive_border = rgba(00000000)
     resize_on_border = false
     allow_tearing = false
@@ -11,7 +11,7 @@ general {
 
 decoration {
     rounding = 0
-    rounding_power = 1
+    rounding_power = 2
     active_opacity = 1
     inactive_opacity = 1
 
@@ -31,7 +31,7 @@ decoration {
 }
 
 animations {
-    enabled = no
+    enabled = false
 
     #        NAME,           X0,   Y0,   X1,   Y1
     bezier = easeOutQuint,   0.23, 1,    0.32, 1
@@ -41,23 +41,23 @@ animations {
     bezier = quick,          0.15, 0,    0.1,  1
 
     #           NAME,          ONOFF, SPEED, CURVE,        [STYLE]
-    animation = global,        1,     2,     default
-    animation = border,        1,     2,     easeOutQuint
-    animation = windows,       1,     2,     easeOutQuint
-    animation = windowsIn,     1,     2,     easeOutQuint, popin 87%
-    animation = windowsOut,    1,     2,     linear,       popin 87%
-    animation = fadeIn,        1,     1.73,  almostLinear
-    animation = fadeOut,       1,     1.46,  almostLinear
-    animation = fade,          1,     3.03,  quick
-    animation = layers,        1,     3.81,  easeOutQuint
-    animation = layersIn,      1,     4,     easeOutQuint, fade
-    animation = layersOut,     1,     1.5,   linear,       fade
-    animation = fadeLayersIn,  1,     1.79,  almostLinear
-    animation = fadeLayersOut, 1,     1.39,  almostLinear
-    animation = workspaces,    1,     1.94,  almostLinear, fade
-    animation = workspacesIn,  1,     1.21,  almostLinear, fade
-    animation = workspacesOut, 1,     1.94,  almostLinear, fade
-    animation = zoomFactor,    1,     7,     quick
+    animation = global,        1,     1,     default
+    animation = border,        1,     1,     easeOutQuint
+    animation = windows,       1,     1,     easeOutQuint
+    animation = windowsIn,     1,     1,     easeOutQuint, popin 87%
+    animation = windowsOut,    1,     1,     linear,       popin 87%
+    animation = fadeIn,        1,     1,     almostLinear
+    animation = fadeOut,       1,     1,     almostLinear
+    animation = fade,          1,     1,     quick
+    animation = layers,        1,     1,     easeOutQuint
+    animation = layersIn,      1,     1,     easeOutQuint, fade
+    animation = layersOut,     1,     1,     linear,       fade
+    animation = fadeLayersIn,  1,     1,     almostLinear
+    animation = fadeLayersOut, 1,     1,     almostLinear
+    animation = workspaces,    1,     1,     almostLinear, slide
+    animation = workspacesIn,  1,     1,     almostLinear, slide
+    animation = workspacesOut, 1,     1,     almostLinear, slide
+    animation = zoomFactor,    1,     1,     quick
 }
 
 dwindle {
@@ -73,5 +73,5 @@ master {
 misc {
     force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
-    background_color = 0x11131f
+    background_color = 0x111111
 }
