--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -27,9 +27,9 @@ truncate_to_repo = false
 fish_style_pwd_dir_length = 1
 
 [character]
-success_symbol = "[❯](purple)"
-error_symbol = "[❯](red)"
-vimcmd_symbol = "[❮](purple)"
+success_symbol = "[\\$](black)"
+error_symbol = "[\\$](red)"
+vimcmd_symbol = "[](black)"
 
 [git_branch]
 format = "[$branch]($style) "
