--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -74,14 +74,14 @@ bind C-s run-shell "sesh connect \"$(
   sesh list | fzf-tmux -p 50%,70% \
     --no-sort --ansi --border-label ' sesh ' --prompt '  ' --gutter ' ' --pointer ' ' \
     --header '^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
-    --color='header:0 prompt:0 border:0 label:0 fg:0' \
+    --color='header:0 prompt:0 border:0 label:8 fg:8' \
     --bind 'tab:down,btab:up' \
-    --bind 'ctrl-a:change-prompt(  )+reload(sesh list --icons)' \
-    --bind 'ctrl-t:change-prompt(  )+reload(sesh list -t --icons)' \
-    --bind 'ctrl-g:change-prompt(  )+reload(sesh list -c --icons)' \
-    --bind 'ctrl-x:change-prompt(  )+reload(sesh list -z --icons)' \
+    --bind 'ctrl-a:change-prompt(  )+reload(sesh list)' \
+    --bind 'ctrl-t:change-prompt(  )+reload(sesh list -t)' \
+    --bind 'ctrl-g:change-prompt(  )+reload(sesh list -c)' \
+    --bind 'ctrl-x:change-prompt(  )+reload(sesh list -z)' \
     --bind 'ctrl-f:change-prompt(  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
-    --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(  )+reload(sesh list --icons)' \
+    --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(  )+reload(sesh list)' \
     # --preview-window 'right:55%' \
     # --preview 'sesh preview {}'
 )\""
