--- a/hypr/.config/hypr/looknfeel.conf
+++ b/hypr/.config/hypr/looknfeel.conf
@@ -4,7 +4,7 @@ general {
     border_size = 1
     col.active_border = rgba(caa88ba0)
     col.inactive_border = rgba(00000000)
-    resize_on_border = false
+    resize_on_border = true
     allow_tearing = false
     layout = master
 }
